# Halide

./: .gitignore  CMakeLists.txt  Makefile
cmake/: BundleStatic.cmake  StaticToObject.cmake
dependencies/llvm/: CMakeLists.txt
packaging/: CMakeLists.txt  HalideConfig.cmake.in  Linux.cmake  macOS.cmake
src/: CMakeLists.txt
test/generator/: CMakeLists.txt
tools/: package-linux.sh  test-packaging-linux.sh  test-packaging-macos.zsh
tutorial/: CMakeLists.txt
